--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -227,8 +227,8 @@ Button.Sheep,
 Button.Corn,
 Button.TradeGood,
 Button.Firearm {
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
@@ -377,4 +377,79 @@ RadioButton.Ferocity .unity-base-field__input {
     font-size: 32px;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.Black{
+    background-image: resource('Textures/Counters/CubeBlack');
+}
+
+.White{
+    background-image: resource('Textures/Counters/CubeWhite');
+}
+
+.Brown{
+    background-image: resource('Textures/Counters/CubeBrown');
+}
+
+.Red{
+    background-image: resource('Textures/Counters/CubeRed');
+}
+    
+.Yellow{
+    background-image: resource('Textures/Counters/CubeYellow');
+}
+
+.Green{
+    background-image: resource('Textures/Counters/CubeGreen');
+}
+    
+.Blue{
+    background-image: resource('Textures/Counters/CubeBlue');
+}
+
+Button.Black,
+Button.White,
+Button.Brown,
+Button.Red,
+Button.Yellow,
+Button.Green,
+Button.Blue {
+    width: 100px;
+    height: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    -unity-background-scale-mode: scale-and-crop;
+}
+
+Button.Black:hover,
+Button.White:hover,
+Button.Brown:hover,
+Button.Red:hover,
+Button.Yellow:hover,
+Button.Green:hover,
+Button.Blue:hover {
+    border-left-color: rgb(151, 64, 27);
+    border-right-color: rgb(151, 64, 27);
+    border-top-color: rgb(151, 64, 27);
+    border-bottom-color: rgb(151, 64, 27);
+    border-left-width: 12px;
+    border-right-width: 12px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+#Displays .Black,
+#Displays .White,
+#Displays .Brown,
+#Displays .Red,
+#Displays .Yellow,
+#Displays .Green,
+#Displays .Blue {
+    max-width: 10%;
 }
